Agregué nuevas funcionalidades, botones para vaciar o comprar carrito, eliminar unidades individuales desde carrito, y busqueda en filtro x palabra clave, en actividad, nombre y tipo

--- a/productos.html
+++ b/productos.html
@@ -73,6 +73,10 @@
         </div>
         
     <!--END PRODUCTOS-->
+        <div id="botonesCarrito" class="d-none">
+            <button id="vaciarCarrito" class="btn btn-danger mt-3">Vaciar Carrito</button>
+            <button id="comprarCarrito" class="btn btn-success mt-3 ms-3">Comprar Carrito</button>
+        </div>
     </main>
     <!--END MAIN-->
     <!--FOOTER-->
