--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0 fs-2 align-items-end">
               <li class="nav-item text-black">
-                <a href="productos.html">Productos</a>
+                <a href="index.html">Productos</a>
               </li>
               <li class="nav-item">
                 <a href="tecnologias.html">Tecnologías</a>
